Lab report #7 created
TODO
- error discussion
- 2nd part of the exercise results verification
- conclusions

--- a/Lab07/labreport_7.tex
+++ b/Lab07/labreport_7.tex
@@ -205,8 +205,67 @@ Czas opadania poziomu azotu dla włączonego zasilacza [s]:& 287 \\ \hline
 Na podstawie wykonanego doświadczenia uzyskaliśmy następujące temperatury:
 \begin{itemize}
 \item Wrzenie pod ciśnieniem atmosferycznym: \textcolor{red}{PODAĆ!!!}
+\item Temperatura punktu potrójnego $T_{p}$: 63.0 K
+\item Temperatura topnienia: 54.9 K
 \end{itemize}
 
+Wykonaliśmy również wykres zależności temperatury od ciśnienia. Dodaliśmy do wykresu regresję logarytmiczną. Niepewność pomiaru ciśnienia wynosiła 0.05 atm.
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.51]{ch01}
+\caption{Wykres zależności temperatur wrzenia od ciśnienia}
+\end{figure}
+
+\subsection{Obliczenie wartości ciepła parowania pod ciśnieniem atmosferycznym}
+
+Równanie Clausiusa-Clapeyrona ma postać:
+\begin{equation}
+	\frac{dT}{dp} = \frac{T(V_{2}-V_{1})}{Q}
+\end{equation}
+
+gdzie:
+Q - ciepło przemiany \\
+T - temperatura przejścia \\
+$\frac{dT}{dp}$ - pochodna zależności temperatury przejścia od ciśnienia \\ 
+$V_{2}-V_{1}$ - różnica objętości faz
+
+Objętość właściwą azotu ciekłego otrzymujemy natychmiast z zależności:
+\begin{equation}
+	V_1 = \frac{m}{\rho} = \frac{1000 g}{0.808 \frac{g}{cm^3}} \approx 1238 cm^3
+\end{equation}
+
+Objętość właściwa azotu w stanie gazowym została wyliczona z równania stanu gazu doskonałego przekształconego do postaci:
+\begin{equation}
+	V_2 = \frac{mRT}{Mp} = \frac{1000 g \cdot 8.31 \frac{J}{mol \cdot K } \cdot \textcolor{red}{77.3K}}{28 \frac{g}{mol} \cdot 1.02 \cdot 10^5 Pa} \approx 0.225 m^3
+\end{equation}
+
+Natomiast wartość pochodnej $\frac{dT}{dp}$ wyznaczymy analitycznie:\\
+Mając do dyspozycji wzór regresji logarytmicznej f(x) = 7.6079 ln(x) - 	9.793. Obliczamy pochodną z funkcji: f'(x) = $\frac{7.6079}{x}$, która w punkcie x = 101325 Pa (dla p = 1 atm) wynosi 7.51 $\cdot 10^{-5}$ $\frac{K}{Pa}$
+
+Teraz pozostaje rozwiązać równanie (1):
+\begin{equation}
+	Q = T(V_2-V_1) \cdot \frac{1}{\frac{dT}{dp}} = \textcolor{red}{77.3K} \cdot (0.225 m^3 - 0.001238 m^3) \cdot \frac{1}{7.51 \cdot 10^{-5} \frac{K}{Pa}} = 2.303 \cdot 10^{5} \frac{J}{kg} = 230.3 \frac{J}{g}
+\end{equation}
+
+\subsection{Pomiar ciepła parowania}
+Na początku obliczmy masę słupa o wysokości wybranej przez nas: $\Delta h = 70 mm$:
+
+\begin{equation}
+	m = V \cdot \rho = 49.5 cm^3 \cdot 0.000808 \frac{g}{cm^3} \approx 40.0 \:g
+\end{equation}
+
+By obliczyć ciepło parowania należy rozwiązań następujący układ równań:
+\begin{equation}
+	\begin{cases}
+	P_s t_1 = \Delta m_1 Q_p \\
+	(P_s + P) \cdot t_2 = \Delta m_2 Q_p
+	\end{cases}
+\end{equation}
+
+W naszym przypadku $\Delta m_1$ oraz $\Delta m_2$ to ta sama wartość wyliczona powyżej.
+
+Po przekształceniach i wstawieniu danych uzyskanych w drugiej części eksperymentu otrzymujemy $Q_p = 126 \frac{J}{g}$
 %----------------------------------------------------------------------------------------
 %	SECTION 6
 %----------------------------------------------------------------------------------------
