lab07 small update
Lab07 small update

--- a/Lab07/labreport_7.tex
+++ b/Lab07/labreport_7.tex
@@ -204,7 +204,7 @@ Czas opadania poziomu azotu dla włączonego zasilacza [s]:& 287 \\ \hline
 \subsection{Wyznaczenie zależności temperatury wrzenia od ciśnienia}
 Na podstawie wykonanego doświadczenia uzyskaliśmy następujące temperatury:
 \begin{itemize}
-\item Wrzenie pod ciśnieniem atmosferycznym: \textcolor{red}{PODAĆ!!!}
+\item Wrzenie pod ciśnieniem atmosferycznym: 77.3 K
 \item Temperatura punktu potrójnego $T_{p}$: 63.0 K
 \item Temperatura topnienia: 54.9 K
 \end{itemize}
@@ -237,7 +237,7 @@ Objętość właściwą azotu ciekłego otrzymujemy natychmiast z zależności:
 
 Objętość właściwa azotu w stanie gazowym została wyliczona z równania stanu gazu doskonałego przekształconego do postaci:
 \begin{equation}
-	V_2 = \frac{mRT}{Mp} = \frac{1000 g \cdot 8.31 \frac{J}{mol \cdot K } \cdot \textcolor{red}{77.3K}}{28 \frac{g}{mol} \cdot 1.02 \cdot 10^5 Pa} \approx 0.225 m^3
+	V_2 = \frac{mRT}{Mp} = \frac{1000 g \cdot 8.31 \frac{J}{mol \cdot K } \cdot 77.3K}{28 \frac{g}{mol} \cdot 1.02 \cdot 10^5 Pa} \approx 0.225 m^3
 \end{equation}
 
 Natomiast wartość pochodnej $\frac{dT}{dp}$ wyznaczymy analitycznie:\\
@@ -245,7 +245,7 @@ Mając do dyspozycji wzór regresji logarytmicznej f(x) = 7.6079 ln(x) - 	9.793.
 
 Teraz pozostaje rozwiązać równanie (1):
 \begin{equation}
-	Q = T(V_2-V_1) \cdot \frac{1}{\frac{dT}{dp}} = \textcolor{red}{77.3K} \cdot (0.225 m^3 - 0.001238 m^3) \cdot \frac{1}{7.51 \cdot 10^{-5} \frac{K}{Pa}} = 2.303 \cdot 10^{5} \frac{J}{kg} = 230.3 \frac{J}{g}
+	Q = T(V_2-V_1) \cdot \frac{1}{\frac{dT}{dp}} = 77.3K \cdot (0.225 m^3 - 0.001238 m^3) \cdot \frac{1}{7.51 \cdot 10^{-5} \frac{K}{Pa}} = 2.303 \cdot 10^{5} \frac{J}{kg} = 230.3 \frac{J}{g}
 \end{equation}
 
 \subsection{Pomiar ciepła parowania}
