--- a/Lab07/labreport_7.tex
+++ b/Lab07/labreport_7.tex
@@ -213,7 +213,7 @@ Wykonaliśmy również wykres zależności temperatury od ciśnienia. Dodaliśmy
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.51]{ch01}
+\includegraphics[scale=0.31]{ch01}
 \caption{Wykres zależności temperatur wrzenia od ciśnienia}
 \end{figure}
 
@@ -248,6 +248,8 @@ Teraz pozostaje rozwiązać równanie (1):
 	Q = T(V_2-V_1) \cdot \frac{1}{\frac{dT}{dp}} = 77.3K \cdot (0.225 m^3 - 0.001238 m^3) \cdot \frac{1}{7.51 \cdot 10^{-5} \frac{K}{Pa}} = 2.303 \cdot 10^{5} \frac{J}{kg} = 230.3 \frac{J}{g}
 \end{equation}
 
+Daje nam to przybliżenie względne 16%.
+
 \subsection{Pomiar ciepła parowania}
 Na początku obliczmy masę słupa o wysokości wybranej przez nas: $\Delta h = 70 mm$:
 
@@ -266,6 +268,8 @@ By obliczyć ciepło parowania należy rozwiązań następujący układ równań
 W naszym przypadku $\Delta m_1$ oraz $\Delta m_2$ to ta sama wartość wyliczona powyżej.
 
 Po przekształceniach i wstawieniu danych uzyskanych w drugiej części eksperymentu otrzymujemy $Q_p = 126 \frac{J}{g}$
+
+Błąd względny takiego przybliżenia wynosi 37%.
 %----------------------------------------------------------------------------------------
 %	SECTION 6
 %----------------------------------------------------------------------------------------
