--- a/Lab04/lab_report04.tex
+++ b/Lab04/lab_report04.tex
@@ -229,10 +229,6 @@ natomiast dla wykonanego z mosiądzu:
 \begin{equation}
 \frac{u_{cMOSI}(E)}{E} = \sqrt{(\frac{u(l)}{l})^{2}+(-2\frac{u(d)}{d})^{2}+(-\frac{u(a)}{a})^{2}} = \sqrt{(\frac{0.001}{1.07})^2 + 4(\frac{8 \cdot 10^{-6}}{1.15 \cdot 10^{-3}})^2+(\frac{3.17 \cdot 10^{-7}}{1.29 \cdot 10^{-5}})^2} \approx 0.028
 \end{equation}
-
-\subsection{Porównanie wyniku pomiaru do wartości tablicowych}
-Przyjmując współczynnik rozszerzenia k = 2 otrzymujemy, że wynik dla stali powinien zawierać się w przedziale [197.4, 233.2]. Uzyskany przez nas wynik 186.4 GPa jest poza tym przedziałem. Powodem tego może być wysłużenie tego drutu, o czym więcej we wnioskach.
-Dla mosiądzu docelowy przedział wg tablic to [94, 106], a uzyskano wynik 80.5 GPa, co również nie jest najlepszym przybliżeniem.
 %----------------------------------------------------------------------------------------
 %	SECTION 6
 %----------------------------------------------------------------------------------------
@@ -241,7 +237,8 @@ Wartość dla mosiądzu to 80.5 GPa a tabelaryczna ok. 100 GPa.
 
 Wartość dla stali, 186.4 GPa, podczas gdy tabelaryczna 200-210 GPa.
 
-Otrzymane przez nas wartości odbiegają od tabelarycznych ponad otrzymaną przez nas niepewność. Dopiero dla k=4 nasze wyniki mieszczą blisko wzorcowych. Warto jednak zaznaczyć, że materiał, z którego wykonane są nasze druty nie został dokładnie zidentyfikowany a także ich właściwości mogły ulec zmianie na skutek zużycia(mechaniczego lub czynników środowiskowych np. korozji). Wobec tego rozszerzanie niepewności miałoby sens tylko w przypadku nowych fabrycznie, lub minimalnie zużytych drutów, z modułem Younga jednoznacznie określonym przez producenta.
+Otrzymane przez nas wartości odbiegają od tabelarycznych ponad otrzymaną przez nas niepewność. W przypadku drutu stalowego dla k = 2 przedział byłby równy [197.4, 233.2] i uzyksany wynik ciągle byłby poza przedziałem. Dopiero dla k=4 wartość tablaryczna mieści się w przedziale. 
+Warto jednak zaznaczyć, że materiał, z którego wykonane są nasze druty nie został dokładnie zidentyfikowany a także ich właściwości mogły ulec zmianie na skutek zużycia(mechaniczego lub czynników środowiskowych np. korozji). Wobec tego rozszerzanie niepewności miałoby sens tylko w przypadku nowych fabrycznie, lub minimalnie zużytych drutów, z modułem Younga jednoznacznie określonym przez producenta.
 
 Biorąc pod uwagę te aspekty i traktując wartości tabelaryczne jako orientacyjne uzyskane przez nas wyniki uznajmemy za prawidłowe.
 
