--- a/Lab08/lab_report8.tex
+++ b/Lab08/lab_report8.tex
@@ -99,6 +99,8 @@ Celem ćwiczenia było wyznaczenie ładunku właściwego elektronu $\frac{e}{m}$
 %----------------------------------------------------------------------------------------
 \section{Wyniki pomiarów}
 
+Dla każdej każdej wartości napięcia (175,200,225,250 [V]) lampy regulowaliśmy natężenie prądu tak aby wiązka trafiała w poszczególne szczebelki oddalone o (2,3,4,5[mm]) od źródła. Pomiary wykonywaliśmy trzy razy, za każdym razem uzyskując dokładnie te same wartości.
+
 \begin{table}[htbp]
 \centering
 \begin{tabular}{|c|c|c|c|c|}
@@ -120,7 +122,7 @@ U[V] & \multicolumn{4}{|c|}{250} \\ \hline
 r[cm] & 0.02 & 0.03 & 0.04 & 0.05 \\ \hline
 I[A] & 4.1 & 2.7 & 2 & 1.6 \\ \hline
 \end{tabular}
-\caption{Wyniki pomiaru natężenia prądu w cewce dla poszczególnych napięć przyspieszających wiązkę i stopnia zakrzywienia wiązki}
+\caption{Wyniki pomiaru natężenia prądu w cewce dla poszczególnych napięć przyspieszających elektrony w wiązce i odległości punktów przecięcia z podziałką od lampy }
 \label{}
 \end{table}
 
@@ -157,7 +159,7 @@ U [V] & \multicolumn{4}{|c|}{$\frac{e}{m}$ [$\frac{C}{kg}$]} \\ \hline
 \label{}
 \end{table}
 
-Znając masę elektronu można pokusić się o wyliczenie ładunku elektronu, bardziej znanej wartości.
+Znając masę elektronu można wyliczyć ładunek elektronu, bardziej elementarnej wartości.
 
 \begin{table}[htbp]
 \centering
@@ -169,7 +171,7 @@ U [V] & \multicolumn{4}{|c|}{e [C]} \\ \hline
 225 & $1.34 \cdot 10^{-19}$ & $1.41 \cdot 10^{-19}$ & $1.48 \cdot 10^{-19}$ & $1.52 \cdot 10^{-19}$ \\ \hline
 250 & $1.42 \cdot 10^{-19}$ & $1.45 \cdot 10^{-19}$ & $1.49 \cdot 10^{-19}$ & $1.49 \cdot 10^{-19}$ \\ \hline
 \end{tabular}
-\caption{Obliczone wartości ładunku elektronu przy założeniu, że masa jest znana}
+\caption{Obliczone wartości ładunku elektronu przy skorzystaniu z tabelarycznej wartości masy elektronu m = 9.11 \cdot 10^{-31} [kg]}
 \label{}
 \end{table}
 
@@ -190,6 +192,11 @@ Nasz wynik niewiele odbiega od tabelarycznej wartości wynoszącej $1.76 \cdot 1
 %----------------------------------------------------------------------------------------
 \section{Wnioski}
 
+Dzięki eksperymentowi otrzymaliśmy wynik -1.37 \cdot 10^{-19} [\frac{A \cdot s}{kg}] mieszczący się przy użyciu niepewności rozszerzonej w przedziale $(-1.91 \cdot 10^{11} \frac{C}{kg}, -1.60 \cdot 10^{11} \frac{C}{kg})$. 
+
+Korzystając z tabelarycznej wartości masy spoczynkowej elektronu m = 9.11 \cdot 10^{-31} [kg] udało się także obliczyć e = $e = -1.37 \cdot 10^{-19} A \cdot s$.
+
+Warto zaznaczyć, że duża podziałka wewnątrz lapmy oraz amperomierz dający wyniki o tylko dwóch miejscach znaczących mocno wpłynął na niepewność pomiaru. Doświadczenie okazało się jednak efektywną (oraz efektowną) metodą wyznaczania ładunku właściwego elektronu i da się ją porównać z metodą Thomsona.
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
