Unofficial theory guide added

--- a/Lab08/lab_report8.tex
+++ b/Lab08/lab_report8.tex
@@ -171,7 +171,7 @@ U [V] & \multicolumn{4}{|c|}{e [C]} \\ \hline
 225 & $1.34 \cdot 10^{-19}$ & $1.41 \cdot 10^{-19}$ & $1.48 \cdot 10^{-19}$ & $1.52 \cdot 10^{-19}$ \\ \hline
 250 & $1.42 \cdot 10^{-19}$ & $1.45 \cdot 10^{-19}$ & $1.49 \cdot 10^{-19}$ & $1.49 \cdot 10^{-19}$ \\ \hline
 \end{tabular}
-\caption{Obliczone wartości ładunku elektronu przy skorzystaniu z tabelarycznej wartości masy elektronu m = 9.11 \cdot 10^{-31} [kg]}
+\caption{Obliczone wartości ładunku elektronu przy skorzystaniu z tabelarycznej wartości masy elektronu m = 9.11 $\cdot 10^{-31}$ [kg]}
 \label{}
 \end{table}
 
@@ -192,9 +192,9 @@ Nasz wynik niewiele odbiega od tabelarycznej wartości wynoszącej $1.76 \cdot 1
 %----------------------------------------------------------------------------------------
 \section{Wnioski}
 
-Dzięki eksperymentowi otrzymaliśmy wynik -1.37 \cdot 10^{-19} [\frac{A \cdot s}{kg}] mieszczący się przy użyciu niepewności rozszerzonej w przedziale $(-1.91 \cdot 10^{11} \frac{C}{kg}, -1.60 \cdot 10^{11} \frac{C}{kg})$. 
+Dzięki eksperymentowi otrzymaliśmy wynik $-1.37 \cdot 10^{-19} [\frac{A \cdot s}{kg}]$ mieszczący się przy użyciu niepewności rozszerzonej w przedziale $(-1.91 \cdot 10^{11} \frac{C}{kg}, -1.60 \cdot 10^{11} \frac{C}{kg})$. 
 
-Korzystając z tabelarycznej wartości masy spoczynkowej elektronu m = 9.11 \cdot 10^{-31} [kg] udało się także obliczyć e = $e = -1.37 \cdot 10^{-19} A \cdot s$.
+Korzystając z tabelarycznej wartości masy spoczynkowej elektronu $m = 9.11 \cdot 10^{-31} $[kg] udało się także obliczyć e = $e = -1.37 \cdot 10^{-19} A \cdot s$.
 
 Warto zaznaczyć, że duża podziałka wewnątrz lapmy oraz amperomierz dający wyniki o tylko dwóch miejscach znaczących mocno wpłynął na niepewność pomiaru. Doświadczenie okazało się jednak efektywną (oraz efektowną) metodą wyznaczania ładunku właściwego elektronu i da się ją porównać z metodą Thomsona.
 
