Lab report 5 corrected

--- a/Lab05/lab05.tex
+++ b/Lab05/lab05.tex
@@ -117,7 +117,7 @@ Celem ćwiczenia był pomiar prędkości dźwięku przy wykorzystaniu zjawiska i
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
-\multicolumn{1}{|c|}{f [HZ]} & \multicolumn{ 6}{c|}{Różnica położeń minimów [mm]} & \multicolumn{1}{c|}{Długość fali f [mm]} & \multicolumn{1}{c|}{Prędkość dzwięku v [m/s]} \\ \hline
+\multicolumn{1}{|c|}{f [Hz]} & \multicolumn{ 6}{c|}{Różnica położeń minimów [mm]} & \multicolumn{1}{c|}{Długość fali f [mm]} & \multicolumn{1}{c|}{Prędkość dzwięku v [m/s]} \\ \hline
 \multicolumn{1}{|l|}{} & \multicolumn{1}{l|}{d1} & \multicolumn{1}{l|}{d2} & \multicolumn{1}{l|}{d3} & \multicolumn{1}{l|}{d4} & \multicolumn{1}{l|}{d5} & \multicolumn{1}{l|}{d6} & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} \\ \hline
 600 & 0 & 0 & 0 & 0 & 0 & 0 & \multicolumn{1}{l|}{} & 0 \\ \hline
 700 & 259 & 0 & 0 & 0 & 0 & 0 & 518 & 362.6 \\ \hline
@@ -166,9 +166,9 @@ Mając wyliczoną wartość prędkości dla każdej z badanych częstotliwości 
 
 Widzimy, że dla pomiaru przy najwyższej częstotliwości mamy doczynienia z błędem grubym.
 
-\subsection{Obliczenie średniej wartości prędkości i niepewność standardową}
-Odrzucając błąd gruby (wynikał on z przegapienia jednego minimum), otrzymujemy prędkość dźwięku v wynoszącą 371 $\frac{m}{s}$
-Korzystając z funkcji w LibreOffice Calc otrzymujemy niepewność standardową prędkości na poziomie 7.26 $\frac{m}{s}$
+\subsection{Obliczenie średniej wartości prędkości i niepewności standardowej typu A}
+Odrzucając błąd gruby (wynikał on z przegapienia jednego minimum), otrzymujemy prędkość dźwięku v wynoszącą $3.7 \cdot 10^2$ $\frac{m}{s}$
+Korzystając z funkcji w LibreOffice Calc otrzymujemy niepewność standardową prędkości na poziomie 7.3 $\frac{m}{s}$
 
 \subsection{Obliczenie prędkości dźwięku w gazie przy temperaturze $0^{o} C$}
 Korzystając z wyliczonej wartości i formuły:
@@ -182,12 +182,20 @@ Niestety dopiero uwzględniając współczynnik k = 4, otrzymujemy wartość mie
 
 \subsection{Obliczenie współczynnika adiabaty $\kappa$}
 
-Korzystając z powyżeszgo związku otrzymujemy:
+Korzystając z powyższego związku otrzymujemy:
 \begin{equation}
 	\kappa = \frac{v^{2}\mu}{RT}
 \end{equation}
 
-Uwzględniając masy molowe pierwiastków występujących w powietrzu i wyliczając średnią ważoną otrzymujemy $\mu = 28.97 \frac{g}{mol} = 2.9 \cdot 10^{-2} \frac{kg}{mol}$. Po podstawieniu otrzymujemy $\kappa$ równą 1.64, która odbiega od rzeczywistej wynoszącej 1.4 o 17\%.
+Uwzględniając masy molowe pierwiastków występujących w powietrzu i wyliczając średnią ważoną otrzymujemy $\mu = 28.97 \frac{g}{mol} = 2.9 \cdot 10^{-2} \frac{kg}{mol}$. Po podstawieniu otrzymujemy $\kappa$ równą 1.64, która odbiega od rzeczywistej wynoszącej 1.4 o 17\% i mieści się w obliczonej poniżej niepewności.
+
+Liczymy niepewność złożoną $\kappa$:
+\begin{equation}
+	u(\kappa) = \sqrt{(\frac{2v\mu}{RT} \cdot u(v))^2 + (\frac{v^2\mu}{RT^2} \cdot u(T))^2} = \sqrt{(\frac{2 \cdot 358.2 \cdot 2.9 \cdot 10^{-2}}{8.31 \cdot 294} \cdot 29.04)^2+(\frac{(358.2)^2 \cdot 2.9 \cdot 10^{-2}}{8.31 \cdot (294)^2} \cdot 1)^2}
+\end{equation}
+\begin{equation}
+	u(\kappa) = \sqrt{0.06098+2.68 \cdot 10^{-5}} \approx 0.25
+\end{equation}
 %----------------------------------------------------------------------------------------
 %	SECTION 6
 %----------------------------------------------------------------------------------------
