lab05 minor repairs and lab report 8 build

--- a/Lab05/lab05.tex
+++ b/Lab05/lab05.tex
@@ -64,7 +64,7 @@
 \toprule
 \begin{tabular}[c]{@{}l@{}}Wydział:\\ \\ WIEiT\end{tabular}                                    & \multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Imię i nazwisko:\\ Rafał Grabiański\\ Zbigniew Królikowski\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}Rok:\\ \\ II\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Grupa:\\ \\ 7\end{tabular}              & \begin{tabular}[c]{@{}l@{}}Zespół:\\ \\ 7\end{tabular} \\ \midrule
 \multicolumn{1}{|c|}{\begin{tabular}[c]{@{}c@{}}PRACOWNIA\\ FIZYCZNA\\ WFiIS AGH\end{tabular}} & \multicolumn{4}{l|}{Temat: Interferencja fal akustycznych}                                                                                                                                                                                                                                                  & \multicolumn{1}{l|}{Nr ćwiczenia: 25}                     \\ \midrule
-\begin{tabular}[c]{@{}l@{}}Data wykonania:\\ \\ \\ 18.11.2014\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 25.11.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Zwrot do poprawy:\\ \\ \\ .\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ .\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data zaliczenia:\\ \\ \\ .\end{tabular} & OCENA:                                                  \\ \bottomrule
+\begin{tabular}[c]{@{}l@{}}Data wykonania:\\ \\ \\ 18.11.2014\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 25.11.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Zwrot do poprawy:\\ \\ \\ 9.12.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 16.12.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data zaliczenia:\\ \\ \\ .\end{tabular} & OCENA:                                                  \\ \bottomrule
 \end{tabular}
 \end{table}
 
@@ -90,7 +90,7 @@ Celem ćwiczenia był pomiar prędkości dźwięku przy wykorzystaniu zjawiska i
 \centering
 \begin{tabular}{|r|r|r|r|r|r|l|l|}
 \hline
-\multicolumn{1}{|c|}{Częstotliowość f [HZ]} & \multicolumn{ 7}{c|}{Położenie kolejnych minimów [mm]} \\ \hline
+\multicolumn{1}{|c|}{Częstotliowość f [Hz]} & \multicolumn{ 7}{c|}{Położenie kolejnych minimów [mm]} \\ \hline
 \multicolumn{1}{|l|}{} & \multicolumn{1}{l|}{a1} & \multicolumn{1}{l|}{a2} & \multicolumn{1}{l|}{a3} & \multicolumn{1}{l|}{a4} & \multicolumn{1}{l|}{a5} & a6 & a7 \\ \hline
 600 & 155 & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} &  &  \\ \hline
 700 & 125 & 384 & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} & \multicolumn{1}{l|}{} &  &  \\ \hline
