--- a/Lab05/lab05.tex
+++ b/Lab05/lab05.tex
@@ -131,7 +131,7 @@ Celem ćwiczenia był pomiar prędkości dźwięku przy wykorzystaniu zjawiska i
 2600 & 66 & 79 & 66 & 83 & 66 & 0 & 144 & 374.4 \\ \hline
 2800 & 69 & 66 & 68 & 65 & 64 & 67 & 133 & 372.4 \\ \hline
 2900 & 63 & 63 & 65 & 64 & 63 & 63 & 127 & 368.3 \\ \hline
-3000 & 62 & 59 & 64 & 61 & 62 & 60 & 122.6666666667 & 368 \\ \hline
+3000 & 62 & 59 & 64 & 61 & 62 & 60 & 122.67 & 368 \\ \hline
 3200 & 59 & 59 & 56 & 60 & 62 & 113 & 118.4 & 378.88 \\ \hline
 \end{tabular}
 \end{center}
@@ -175,10 +175,10 @@ Korzystając z wyliczonej wartości i formuły:
 \begin{equation}
 	v = \sqrt{\frac{\kappa RT}{\mu}}
 \end{equation}
-Otrzymujemy v = 358.2 $\frac{m}{s}$
+Otrzymujemy v = $3.58 \cdot 10^2$ $\frac{m}{s}$
 
 \subsection{Porównanie wartości obliczonej z rzeczywistością}
-Niestety dopiero uwzględniając współczynnik k = 4, otrzymujemy wartość mieszczącą się w przedziale błędu $358.2 \frac{m}{s} +/- 29.04 \frac{m}{s}$
+Niestety dopiero uwzględniając współczynnik k = 4, otrzymujemy wartość mieszczącą się w przedziale błędu $3.58 \cdot 10^2 \frac{m}{s} +/- 29.04 \frac{m}{s}$
 
 \subsection{Obliczenie współczynnika adiabaty $\kappa$}
 
@@ -203,7 +203,7 @@ Liczymy niepewność złożoną $\kappa$:
 
 Doswiadczenie wykazało poprawność metody wyznaczania prędkości dźwięku w gazach przy pomocy wykorzystania zjawiska interferencji falowej.
 Uwględniając niepewność rozszerzoną k = 4 uzyskaliśmy wynik zgodny z wartością tabelaryczną dla powietrza w temperaturze 273 K;
-tabelaryczna = \textbf{331 $\frac{m}{s}$} uzyskana w doświadczeniu = \textbf{\textbf{358.2} $\frac{m}{s}$}. 
+tabelaryczna = \textbf{$3.3 \cdot 10^{2}$ $\frac{m}{s}$} uzyskana w doświadczeniu = \textbf{\textbf{$3.58 \cdot 10^2$} $\frac{m}{s}$}. 
 \\
 Wartość $\kappa$ przy wykorzystaniu tej samej niepewności rozszerzonej wyniosła \textbf{1.64}, w porównaniu do tabelarycznej \textbf{(1.4)}.
 
