--- a/Lab08/lab_report8.tex
+++ b/Lab08/lab_report8.tex
@@ -194,7 +194,7 @@ Nasz wynik niewiele odbiega od tabelarycznej wartości wynoszącej $1.76 \cdot 1
 
 Dzięki eksperymentowi otrzymaliśmy wynik $-1.37 \cdot 10^{-19} [\frac{A \cdot s}{kg}]$ mieszczący się przy użyciu niepewności rozszerzonej w przedziale $(-1.91 \cdot 10^{11} \frac{C}{kg}, -1.60 \cdot 10^{11} \frac{C}{kg})$. 
 
-Korzystając z tabelarycznej wartości masy spoczynkowej elektronu $m = 9.11 \cdot 10^{-31} $[kg] udało się także obliczyć e = $e = -1.37 \cdot 10^{-19} A \cdot s$.
+Korzystając z tabelarycznej wartości masy spoczynkowej elektronu $m = 9.11 \cdot 10^{-31} $[kg] udało się także obliczyć $e = -1.37 \cdot 10^{-19} A \cdot s$.
 
 Warto zaznaczyć, że duża podziałka wewnątrz lapmy oraz amperomierz dający wyniki o tylko dwóch miejscach znaczących mocno wpłynął na niepewność pomiaru. Doświadczenie okazało się jednak efektywną (oraz efektowną) metodą wyznaczania ładunku właściwego elektronu i da się ją porównać z metodą Thomsona.
 
