--- a/Lab09/lab_report_9.tex
+++ b/Lab09/lab_report_9.tex
@@ -168,12 +168,19 @@ Na koniec obliczamy względną niepewność złożoną: \\ \newline
 \centerline{$\frac{u_c(B_0)}{B_0} = \sqrt{[\frac{u_A(B_0)}{B_0}]^2 + [\frac{u_B(I)}{I}]^2 + [\frac{u_B(R)}{R}]^2} = \sqrt{[2.8\%]^2+[11\%]^2+[2.3\%]^2} \approx 11.6 \%$}
 \newline
 \newline
-I z tego szybko liczymy $u_c(B_0) = 2.84 \cdot 10^{-6} \mu T$
+I z tego liczymy $u_c(B_0) = 2.84 \cdot 10^{-6} \mu T$
 %----------------------------------------------------------------------------------------
 %	SECTION 6
 %----------------------------------------------------------------------------------------
 \section{Wnioski}
 
+Otrzymana wartość składowej poziomej natężenia pola magnetycznego Ziemi dla Krakowa, wyniosła $B_0 = \overline{B} = 2.45 \cdot 10^{-5} \mu T$. W porównaniu do wartości tabelarycznej: $B_T = \overline{B} = 2.1 \cdot 10^{-5} \mu T$ oraz k=2 mieścimy się przedziale w niepewności rozszerzonej ($u_c 1.53 \cdot 10^{-5} \mu T$, $u_c 2.67 \cdot 10^{-5} \mu T$).
+
+Nie używając niepewności rozszerzonej wykroczyliśmy tylko nieznacznie poza przedział, co świadczy o prawidłowym wykonaniu doświadczenia. Nie zaobserwowano błędów grubych.
+
+Największy wpływ na niepewność pomiaru miała mała rozdzielczość amperomierza równa $u_c 2.84 mA T$, a największa możliwa do otrzymania niepewność wyniosła: \begin{equation}
+\Delta I = \frac{zakres x klasa}{100} = 56 mA
+\end{equation}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
