Lab06 report corrected

--- a/Lab06/lab_report_6.tex
+++ b/Lab06/lab_report_6.tex
@@ -65,7 +65,7 @@
 \toprule
 \begin{tabular}[c]{@{}l@{}}Wydział:\\ \\ WIEiT\end{tabular}                                    & \multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Imię i nazwisko:\\ Rafał Grabiański\\ Zbigniew Królikowski\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}Rok:\\ \\ II\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Grupa:\\ \\ 7\end{tabular}              & \begin{tabular}[c]{@{}l@{}}Zespół:\\ \\ 7\end{tabular} \\ \midrule
 \multicolumn{1}{|c|}{\begin{tabular}[c]{@{}c@{}}PRACOWNIA\\ FIZYCZNA\\ WFiIS AGH\end{tabular}} & \multicolumn{4}{l|}{Temat: Dyfrakcja światła na szczelinie pojedynczej i podwójnej}                                                                                                                                                                                                                                                  & \multicolumn{1}{l|}{Nr ćwiczenia: 71}                     \\ \midrule
-\begin{tabular}[c]{@{}l@{}}Data wykonania:\\ \\ \\ 25.11.2014\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 2.12.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Zwrot do poprawy:\\ \\ \\ .\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ .\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data zaliczenia:\\ \\ \\ .\end{tabular} & OCENA:                                                  \\ \bottomrule
+\begin{tabular}[c]{@{}l@{}}Data wykonania:\\ \\ \\ 25.11.2014\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 2.12.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Zwrot do poprawy:\\ \\ \\ 16.12.2014\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data oddania:\\ \\ \\ 13.01.2015\end{tabular} & \begin{tabular}[c]{@{}l@{}}Data zaliczenia:\\ \\ \\ .\end{tabular} & OCENA:                                                  \\ \bottomrule
 \end{tabular}
 \end{table}
 
@@ -197,10 +197,10 @@ Celem ćwiczenia było wyznaczenie rozkładu natężenia światła laserowego dl
 \begin{tabular}{|c|r|r|r|r|}
 \hline
 \textbf{Numer maksimum} & \textbf{Położenie z lewej [mm]} & \multicolumn{1}{c|}{\textbf{Położenie z prawej [mm]}} & \multicolumn{1}{c|}{\textbf{$x_{sr}$}} & \multicolumn{1}{c|}{\textbf{Obliczona odległość d}} \\ \hline
-\textbf{1 minimum} & -7.40 & 6.40 & 6.90 & 9.19E-005 \\ \hline
-\textbf{1 maksimum boczne} & -9.80 & 9.20 & 9.50 & 1.00E-004 \\ \hline
-\textbf{2 minimum} & -14.40 & 13.20 & 13.80 & 9.19E-005 \\ \hline
-\textbf{2 maksimum boczne} & -15.40 & 15.20 & 15.30 & 1.04E-004 \\ \hline
+\textbf{1 minimum} & -7.40 & 6.40 & 6.90 & $(9.19 \pm 0.5) \cdot 10^{-5} $ \\ \hline
+\textbf{1 maksimum boczne} & -9.80 & 9.20 & 9.50 & $(1.0 \pm 0.05) \cdot 10^{-4}$ \\ \hline
+\textbf{2 minimum} & -14.40 & 13.20 & 13.80 & $(9.19 \pm 0.5) \cdot 10^{-5}$ \\ \hline
+\textbf{2 maksimum boczne} & -15.40 & 15.20 & 15.30 & $(1.04 \pm 0.05) \cdot 10^{-4}$ \\ \hline
 \end{tabular}}
 \caption{Położenia maksimów i minimów oraz obliczona szerokość d dla szczeliny pojedynczej}
 \label{}
@@ -300,7 +300,7 @@ Wyniki umieszciliśmy w tabeli:
 \end{table}
 
 \subsubsection{Wartość średnia d i niepewność u(d)}
-Otrzymaliśmy $d = 3.0 \cdot 10^{-4} m$ oraz $u(d) = 4.2 \cdot 10^{-5} m$
+Otrzymaliśmy $d = (3.0 \pm 0.42) \cdot 10^{-4} m$ 
 \subsubsection{Wyznaczenie stosunku $I_{min}$ do $I_{max}$}
 Nasze $I_{max}$ to 223 j.u. a $I_{min}$ 0.1. Czyli nasz współczynnik $\frac{I_{min}}{I_{max}} = 4.5*10^{-4}$ co jest bliskie zeru.
 
@@ -312,9 +312,9 @@ Nasze $I_{max}$ to 223 j.u. a $I_{min}$ 0.1. Czyli nasz współczynnik $\frac{I_
 
 Wyniki z doświadczenia korelowały z matematycznym opisem rozkładu natężenia światła na ekranie.
 
-Otrzymana szerokość szczeliny w pierwszym doświadczeniu: $d = 9.47 \cdot 10^{-5}$ m co przy $u(d)= 2.74 \cdot 10^{-6}$ m i przyjęciu $k=2$ sprawia, że mieści się w przedziale razem z prawidziwym d = 0.1 mm.
+Otrzymana szerokość szczeliny w pierwszym doświadczeniu: $d = (9.5 \pm 0.27) \cdot 10^{-5}$ m co przy $u(d)= 2.7 \cdot 10^{-6}$ m i przyjęciu $k=2$ sprawia, że mieści się w przedziale razem z prawidziwym d = 0.1 mm.
 
-Otrzymana odległość pomiędzy szczelinami w drugim doświadczeniu wynosi: $d = 3.01 \cdot 10^{-4}$ przy niepewności $4.23 \cdot 10^{-5}$.  Podczas gdy prawdziwa d= 0.25 mm, także nasz wynik niemal plasuje się w niepewności o k = 1.
+Otrzymana odległość pomiędzy szczelinami w drugim doświadczeniu wynosi: $d = (3.0 \pm 0.42) \cdot 10^{-4}$ przy niepewności $4.2 \cdot 10^{-5}$.  Podczas gdy prawdziwa d = 0.25 mm, także nasz wynik niemal plasuje się w niepewności o k = 1.
 
 W przypadku doświadczenia z dwoma szczelinami, zainstniały wątpliwości czy pierwszy prążek została prawidłowo zarejestrowany, i w rzeczywistości dane opisują 3 prążki boczne.
 
