Pdf for lab09 generated with minor changes

--- a/Lab09/lab_report_9.tex
+++ b/Lab09/lab_report_9.tex
@@ -103,7 +103,7 @@ Celem ćwiczenia było zapoznanie się z budową i działaniem przyrządu nazwan
 \centering
 \begin{tabular}{|c|r|r|r|r|r|r|}
 \hline
-Lp & \multicolumn{1}{c|}{Liczba Zwojów n} & \multicolumn{1}{c|}{Prąd [mA]} & \multicolumn{1}{c|}{Kąt w lewo [st]} & \multicolumn{1}{c|}{Kąt w prawo [st]} & \multicolumn{1}{c|}{Średni kąt [st]} & \multicolumn{1}{c|}{B [mi T]} \\ \hline
+Lp & \multicolumn{1}{c|}{Liczba Zwojów n} & \multicolumn{1}{c|}{Prąd [mA]} & \multicolumn{1}{c|}{Kąt w lewo [$^o$]} & \multicolumn{1}{c|}{Kąt w prawo [$^o$]} & \multicolumn{1}{c|}{Średni kąt [$^o$]} & \multicolumn{1}{c|}{B [$\mu T$]} \\ \hline
 1 & 12 & 300 & 35 & 35 & 35 & 2.48 \\ \hline
 2 & 12 & 350 & 40 & 40 & 40 & 2.42 \\ \hline
 3 & 12 & 250 & 29 & 31 & 30 & 2.51 \\ \hline
@@ -174,12 +174,12 @@ I z tego liczymy $u_c(B_0) = 2.84 \cdot 10^{-6} \mu T$
 %----------------------------------------------------------------------------------------
 \section{Wnioski}
 
-Otrzymana wartość składowej poziomej natężenia pola magnetycznego Ziemi dla Krakowa, wyniosła $B_0 = \overline{B} = 2.45 \cdot 10^{-5} \mu T$. W porównaniu do wartości tabelarycznej: $B_T = \overline{B} = 2.1 \cdot 10^{-5} \mu T$ oraz k=2 mieścimy się przedziale w niepewności rozszerzonej ($u_c 1.53 \cdot 10^{-5} \mu T$, $u_c 2.67 \cdot 10^{-5} \mu T$).
+Otrzymana wartość składowej poziomej natężenia pola magnetycznego Ziemi dla Krakowa, wyniosła $B_0 = 2.45 \cdot 10^{-5} \mu T$. W porównaniu do wartości tabelarycznej: $B_T = 2.1 \cdot 10^{-5} \mu T$ oraz k=2 mieścimy się przedziale w niepewności rozszerzonej ($1.53 \cdot 10^{-5} \mu T$, $2.67 \cdot 10^{-5} \mu T$).
 
 Nie używając niepewności rozszerzonej wykroczyliśmy tylko nieznacznie poza przedział, co świadczy o prawidłowym wykonaniu doświadczenia. Nie zaobserwowano błędów grubych.
 
 Największy wpływ na niepewność pomiaru miała mała rozdzielczość amperomierza równa $u_c 2.84 mA T$, a największa możliwa do otrzymania niepewność wyniosła: \begin{equation}
-\Delta I = \frac{zakres x klasa}{100} = 56 mA
+\Delta I = \frac{zakres \, x \, klasa}{100} = 56 mA
 \end{equation}
 
 %----------------------------------------------------------------------------------------
