some stuff before last labs

--- a/Lab06/lab_report_6.tex
+++ b/Lab06/lab_report_6.tex
@@ -212,11 +212,12 @@ Celem ćwiczenia było wyznaczenie rozkładu natężenia światła laserowego dl
 \hline
 \textbf{Element obrazu dyfrakcyjnego} & \textbf{$I_{l}$[j. u.]} & \textbf{$I_{p}$[j. u.]} & \textbf{I względne dośw.                          } & \textbf{I względne teor.} \\ \hline
 \textbf{1 maksimum boczne} & 12 & 13 & 0.021 & 0.045 \\ \hline
-\textbf{2 maksimum boczne} & 0 & 0 & 0.000 & 0.016 \\ \hline
+\textbf{2 maksimum boczne} & 0 & 0 & 0.000\protect\footnotemark & 0.016 \\ \hline
 \end{tabular}
 \caption{Natężenie światła dla maksimów w jednostkach umownych dla szczeliny pojedynczej}
 \label{}
 \end{table}
+\footnotetext{Wyniki w tabelach podane są przed znormalizowaniem, które było potrzebne do narysowania wykresu zlogarytmowanego. W niektórych pomiarach otrzymywaliśmy natężenie (umowne) ujemne. Stąd pojawia się w opracowaniu wartość natężenia 0, nie jest to jednak wartość najmniejsza.}
 
 \subsection{Pojedyncza szczelina}
 \subsubsection{Wykres zależności natężenia światła I od położenia detektora x}
